--- a/juegouno.html
+++ b/juegouno.html
@@ -125,8 +125,8 @@
               <div class="containertitulo" id="margenestitulo">
                 <h3>Como jugar:</h3>
               </div>                  <br>
-                <iframe class="container" width="560" height="315" src="https://www.youtube.com/embed/H5YVWvBtPOc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
+                <iframe class="container" width="560" height="315" src="https://www.youtube.com/embed/_0PJ10cjovU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
         </div>
         
         <script src="juegouno.js"></script>
