--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <br>
     <div class="container">
-        <button class="btn" onclick="uno()">Tecno dados</button>
+        <button class="btn" onclick="uno()">Tecno ludo</button>
         <button class="btn" onclick="dos()">Cuenta cuentos</button>
     </div>
 </body>
