--- a/juegouno.html
+++ b/juegouno.html
@@ -114,7 +114,7 @@
   <h2>Tecno ludo</h2>
 </div>  
 <div class="containertitulo" id="margenestitulo">
-    <p>Para saber como jugar, miren el video que está más abajo. Y si ya saben, seleccionen el nivel y divertanse</p>
+    <p>Para saber cómo jugar, miren el video que está más abajo. Y si ya saben, seleccionen el nivel. ¡Divértanse!</p>
 </div>
 <br>
         <div class="container">
