--- a/juegodos.html
+++ b/juegodos.html
@@ -114,7 +114,7 @@
   <h2>Cuenta cuentos</h2>
 </div>  
 <div class="containertitulo" id="margenestitulo">
-    <p>Para jugar, descargar las siguiente app:</p>
+    <p>Para jugar, descargar la siguiente app:</p>
 </div>
 <br>
         <div class="container">
