--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </div>
     <br>
     <div class="container">
-        <button class="btn" onclick="uno()">Tecno ludo</button>
-        <button class="btn" onclick="dos()">Cuenta cuentos</button>
+        <button class="btn" onclick="uno()">Tecno Ludo</button>
+        <button class="btn" onclick="dos()">Cuenta Cuentos</button>
     </div>
 </body>
 <script src="index.js"></script>
