--- a/juegodos.html
+++ b/juegodos.html
@@ -125,7 +125,7 @@
                 <h3>Cómo jugar:</h3>
               </div>                  
               <br>
-                <iframe class="container" width="560" height="315" src="https://www.youtube.com/embed/Evnbn3CGjc4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+               <iframe class="container" width="560" height="315" src="https://www.youtube.com/embed/HukhMubi4wo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
         
